kubernetes/powershell-universal/manifest/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-login
  namespace: my-psuniversal
spec:
  redirectRegex:
    regex: ^https://psuniversal.local.127.0.0.1.sslip.io/$
    replacement: https://psuniversal.local.127.0.0.1.sslip.io/login?returnUrl=/admin

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: psuniversal-ingress
  namespace: my-psuniversal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: my-psuniversal-redirect-login@kubernetescrd
    cert-manager.io/cluster-issuer: selfsigned
spec:
  rules:
  - host: psuniversal.local.127.0.0.1.sslip.io
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: psuniversal-svc
         port:
          number: 5000
  tls:
  - hosts:
    - psuniversal.local.127.0.0.1.sslip.io
    secretName: psuniversal-cert
